Added minor changes

--- a/pages/packages/core.mdx
+++ b/pages/packages/core.mdx
@@ -1,1 +1,21 @@
 # Framework agnostic useCookieConsent hook
+
+## Intro
+
+## Install
+
+Using yarn:
+
+```bash
+yarn add @use-cookie-consent/core
+```
+
+Using npm:
+
+```bash
+npm install @use-cookie-consent/core
+```
+
+## Usage
+
+## API
