--- a/pages/packages/react.mdx
+++ b/pages/packages/react.mdx
@@ -1,1 +1,21 @@
 # useCookieConsent for React apps
+
+## Intro
+
+## Install
+
+Using yarn:
+
+```bash
+yarn add @use-cookie-consent/react
+```
+
+Using npm:
+
+```bash
+npm install @use-cookie-consent/react
+```
+
+## Usage
+
+## API
