--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -4,3 +4,5 @@ When adding a cookie consent dialog to a website, developers are usually faced w
 
 1. Use an existing cookie consent banner, which is usually hard to customise.
 2. Create your own with the features and style you need, but you have to implement everything yourself.
+
+This package aims to solve the problem of choosing between the two half-solutions by providin you with a hook that handles all the logic, and leaves you to implement the user interface.
