--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,3 +6,10 @@ When adding a cookie consent dialog to a website, developers are usually faced w
 2. Create your own with the features and style you need, but you have to implement everything yourself.
 
 This package aims to solve the problem of choosing between the two half-solutions by providin you with a hook that handles all the logic, and leaves you to implement the user interface.
+
+## Getting started
+
+Depending on the stack you're using, you might want to use different packages:
+
+- If you're using [React.js](https://reactjs.org/), check out [react package documentation](/use-cookie-consent-docs/packages/react)
+- If you're using some other framework or writing project in pure JavaScript, check out [core package documentation](/use-cookie-consent-docs/packages/core)
